Source/WebCore/Modules/websockets/ThreadableWebSocketChannel.h
@@ -53,6 +53,8 @@ public:
     static Ref<ThreadableWebSocketChannel> create(ScriptExecutionContext&, WebSocketChannelClient&, SocketProvider&);
     ThreadableWebSocketChannel() { }
 
+    virtual bool isWebSocketChannel() const { return false; }
+
     enum SendResult {
         SendSuccess,
         SendFail
