Source/WebCore/Modules/websockets/WebSocketChannel.h
@@ -38,9 +38,11 @@
 #include "Timer.h"
 #include "WebSocketDeflateFramer.h"
 #include "WebSocketFrame.h"
+#include "WebSocketHandshake.h"
 #include <wtf/Deque.h>
 #include <wtf/Forward.h>
 #include <wtf/RefCounted.h>
+#include <wtf/TypeCasts.h>
 #include <wtf/Vector.h>
 #include <wtf/text/CString.h>
 
@@ -49,11 +51,12 @@ namespace WebCore {
 class Blob;
 class Document;
 class FileReaderLoader;
+class ResourceRequest;
+class ResourceResponse;
 class SocketProvider;
 class SocketStreamHandle;
 class SocketStreamError;
 class WebSocketChannelClient;
-class WebSocketHandshake;
 
 class WebSocketChannel : public RefCounted<WebSocketChannel>, public SocketStreamHandleClient, public ThreadableWebSocketChannel, public FileReaderLoaderClient
 {
@@ -61,6 +64,8 @@ class WebSocketChannel : public RefCounted<WebSocketChannel>, public SocketStrea
 public:
     static Ref<WebSocketChannel> create(Document& document, WebSocketChannelClient& client, SocketProvider& provider) { return adoptRef(*new WebSocketChannel(document, client, provider)); }
     virtual ~WebSocketChannel();
+
+    bool isWebSocketChannel() const final { return true; }
 
     bool send(const char* data, int length);
 
@@ -111,6 +116,11 @@ public:
     void didReceiveData() override;
     void didFinishLoading() override;
     void didFail(int errorCode) override;
+
+    unsigned identifier() const { return m_identifier; }
+    ResourceRequest clientHandshakeRequest() const;
+    const ResourceResponse& serverHandshakeResponse() const;
+    WebSocketHandshake::Mode handshakeMode() const;
 
     using RefCounted<WebSocketChannel>::ref;
     using RefCounted<WebSocketChannel>::deref;
@@ -218,5 +228,9 @@ private:
 };
 
 } // namespace WebCore
+
+SPECIALIZE_TYPE_TRAITS_BEGIN(WebCore::WebSocketChannel)
+    static bool isType(const WebCore::ThreadableWebSocketChannel& threadableWebSocketChannel) { return threadableWebSocketChannel.isWebSocketChannel(); }
+SPECIALIZE_TYPE_TRAITS_END()
 
 #endif // ENABLE(WEB_SOCKETS)
